fix: quick fix for css on mobile devices

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -27,6 +27,16 @@
 }
 
 @media (max-width: 768px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    background-color: #000000;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  }
+  
   .header-logo {
     height: 45px;
   }
